k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: lipid-classifier
  labels:
    app.kubernetes.io/name: lipid-backend
    app.kubernetes.io/part-of: lipid-class-classifier
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: lipid-backend
  ports:
    - name: http
      port: 8080
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: lipid-frontend
  namespace: lipid-classifier
  labels:
    app.kubernetes.io/name: lipid-frontend
    app.kubernetes.io/part-of: lipid-class-classifier
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: lipid-frontend
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: lipid-rabbitmq
  namespace: lipid-classifier
  labels:
    app.kubernetes.io/name: lipid-rabbitmq
    app.kubernetes.io/part-of: lipid-class-classifier
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: lipid-rabbitmq
  ports:
    - name: amqp
      port: 5672
      targetPort: amqp
    - name: management
      port: 15672
      targetPort: management
